[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.12.0"
nalgebra = "0.32.3"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.8.0"
rustc-hash = "1.1.0"
rustworkx-core = "0.13.2"
