[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.15.0"
nalgebra = "0.35"
nom = "7.1.3"
num = "0.4.3"
petgraph = "0.8.3"
rand = "0.10.1"
rayon = "1.12.0"
rustc-hash = "2.1.2"
rustworkx-core = "0.18.0"
