[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.95"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
cached = "0.54.0"
itertools = "0.13.0"
log = "0.4.22"
nohash = "0.2.0"
nom = "7.1.3"
num = "0.4.1"
petgraph = "0.6.5"

png = "0.17.15"
rayon = "1.10.0"
rustc-hash = "2.1.0"
