[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"



[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.95"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

itertools = "0.14.0"
log = "0.4.22"
nohash = "0.2.0"
nom = "8.0.0"
num = "0.4.1"
common = { path = "../common" }

rustc-hash = "2.1.0"
tinyvec = { version = "1.10.0", features = ["latest_stable_rust"] }
cached = "0.56.0"
petgraph = "0.8.3"
indicatif = "0.18.3"
good_lp = { version = "1.14.2", features = ["highs"] , default-features = false }
